--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=LearnCreateGrow
 APP_ENV=local
 APP_KEY=base64:eENFPmZQUgyOHgjRmibsj37Ok8QvgUO9X834xMe2iWU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://learncreategrow.com.ng
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
